--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "css-loader": "^5.2.2",
     "tailwindcss": "1.3.5",
     "turbolinks": "^5.2.0"
   },
